# 100-day-of-code

./: .gitignore  README.md  pyproject.toml  word_pad.html
day_1/: Band_Name_Generator.py  variables.py
day_10/: calc_1.py  calc_2.py  calculator_final.py  days_in_month_sunction.py  function.py
day_11/: Requirements.py  blackjack.py  solution_teacher.py
day_12/: guessing_game.py  local_vs_global_scope.py
day_13/: step_1.py
day_14/: higher_lower_game.py  solution.py
day_15/: coffe_machine.py  data.py  solution.py
day_16/: main.py  tortule.py
day_17/: data.py  main.py  quiz_brain.py
day_18/: chalenge_1.py  chalenge_2.py  chalenge_3.py  final_chelenge.py  tortule_1.py
day_19/: chalenge_1.py  method_lisen.py  turtle_race.py
day_2/: bmi_calculator.py  tip_calculator.py
day_20/: main.py  snake.py
day_20_21/: main.py  scoreboard.py  snake.py
day_22/: ball.py  main.py
day_23/: car_manager.py  main.py  player.py  scoreboard.py
day_24/: day_24_working_in_file.py  main_2_re.py  main_path.py  main_snake.py  my_file  scoreboard.py  snake.py
day_25/: central_park.py  main.py  new_data.csv  squirrel_count.csv
day_26/: main.py
day_27/: componovka.py  converter.py  main.py  playground.py
day_28/: main.py
day_29/: data.json  main.py  main1.py
day_3/: bim_v2.py  leap_year.py  love_calculator.py  pizza_order_practice.py  treasure_island.py
day_30/: Exercise_2_KeyError_Handling.py  exercise_1.py  main.py
day_31/: main_day31.py
day_32/: main_32_day.py
day_33/: main_day_33.py
day_34/: data.py  main.py  ui.py
day_35/: main_day35.py
day_36/: main.py
day_37/: main_da37.py
day_40/: main.py  (+4 more)
(+110 files in other folders)
