[tool.poetry]
name = "100-day-of-code"
version = "0.1.0"
description = ""
authors = ["Dmitriy Sorokin <sorokin.da92@gmail.com>"]
readme = "README.md"
packages = [{include = "100_day_of_code"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
selenium = "^4.7.2"
prettytable = "^3.6.0"
pandas = "^1.5.3"
pyperclip = "^1.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
