[tool.poetry]
name = "100-day-of-code"
version = "0.1.0"
description = ""
authors = ["Dmitriy Sorokin <sorokin.da92@gmail.com>"]
readme = "README.md"
packages = [{include = "100_day_of_code"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
selenium = "^4.7.2"
prettytable = "^3.6.0"
pandas = "^1.5.3"
pyperclip = "^1.8.2"
voluptuous = "^0.13.1"
pytest-voluptuous = "^1.2.0"
beautifulsoup4 = "^4.11.2"
webdriver-manager = "^3.8.5"
Flask = "^2.2.3"
Flask-WTF = "^1.1.1"
Flask-Bootstrap = "^3.3.7.1"
email-validator = "^1.3.1"
Flask-SQLAlchemy = "^3.0.3"
Flask-CKEditor = "^0.4.6"
Flask-Login = "^0.6.2"
Flask-Gravatar = "^0.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
